--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">Capabilities.pdf</a>
+              <a class="dropdown-item" href="#">Credit Application</a>
+              <a class="dropdown-item" href="#">Credit Card Authorization</a>
+              <a class="dropdown-item" href="#">Line Card</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -63,10 +66,11 @@
               <a class="dropdown-item" href="#">Certifications</a>
               <a class="dropdown-item" href="#">Affiliations</a>
               <a class="dropdown-item" href="#">Projects & Customers</a>
+              <a class="dropdown-item" href="#">Corporate Social Responsibility</a>
             </div>
           </li>
           <li id=num class="nav-item">
-            For immediate service call 510-215-5100
+            To order please call 510-215-5100
           </li>
         </ul>
       </div>
@@ -74,7 +78,7 @@
         <strong>Laner Electric Supply</strong>
       </span>
       <span class="navbar-text">
-         <div id="svc">For immediate service call</div> 510-215-5100
+         <div id="svc">To order please call</div> 510-215-5100
       </span>
     </nav>
 
@@ -197,13 +201,13 @@
              </div>
            <div class="col-md col-centered">
              <h4>For general inquries:</h4>
-             <form class="contactus" method="post">
+             <form action="mailto:cazessus.elias@gmail.com" enctype="multipart/form-data" class="contactus" method="post">
                <br><input style="width:300px;"type="text" name="name" placeholder="Full Name">
-               <br><input style="width:300px;"type="text" name="email" placeholder="Email Address">
+               <br><input style="width:300px;"type="email" name="email" placeholder="Email Address">
                <br><input style="width:300px;"type="text" name="company" placeholder="Company">
                <br><input style="width:300px;"type="text" name="number" placeholder="Phone Number">
                <br><textarea style="width:300px;"type="text" name="message" placeholder="Message"></textarea>
-               <br><button id="sub3" type="button" name="button">Submit</button>
+               <br><input id="sub3" type="submit" value="Submit">
              </form>
            </div>
 
@@ -218,7 +222,6 @@
       </div>
       <div class="ics">
       <button id="but" class="fab fa-linkedin-in"></button>
-      <button id="but2" class="fab fa-yelp"></button>
       <button id="but3" class="fas fa-rss"></button>
       </div>
     </footer>
