--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               Download
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Capabilities.pdf</a>
+              <a class="dropdown-item" download="cs.pdf" href="CAPABILITY STATEMENT.pdf">Capabilities.pdf</a>
               <a class="dropdown-item" href="#">Credit Application</a>
               <a class="dropdown-item" href="#">Credit Card Authorization</a>
               <a class="dropdown-item" href="#">Line Card</a>
@@ -91,26 +91,23 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md col-centered">
+        <div class="col-md-6 col-centered">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </div>
-        <br>
+
         <!--Login-->
-
-
-
-        <div class="col-md col-centered">
+        <div class="col-md-6 col-centered">
 
           <form id="log">
 
             <div class="form-group">
-              <strong>Customer Login<br></strong>
-              <label for="exampleInputEmail1"><strong>Username</strong></label>
+              <strong>Extranet Login<br></strong>
+              <label for="exampleInputEmail1">Username</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               <small id="emailHelp" class="form-text">We'll never share your email with anyone.</small>
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1"><strong>Password</strong></label>
+              <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="form-group form-check">
@@ -123,6 +120,28 @@
         </div>
       </div>
     </div>
+
+    <!--orderform-->
+    <div class="col-md-6 col-centered">
+    <h4>Place an order:</h4>
+    <form action="mailto:cazessus.elias@gmail.com" enctype="multipart/form-data" class="contactus" method="post">
+      <br><input style="width:300px;"type="text" name="name" placeholder="Full Name">
+      <br><input style="width:300px;"type="email" name="email" placeholder="Email Address">
+      <br><input style="width:300px;"type="text" name="company" placeholder="Company">
+      <br><input style="width:300px;"type="text" name="item" placeholder="Phone Number">
+      <br><select class="" name="">
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+        <option value="4">Four</option>
+        <option value="5">Five</option>
+      </select>
+      <br><textarea style="width:300px;"type="text" name="message" placeholder="Message"></textarea>
+      <br><input id="sub3" type="submit" value="Submit">
+    </form>
+      </div>
+
+
    <hr id="hr" />
 
    <div class="col-8 col-centered">
