--- a/index.html
+++ b/index.html
@@ -9,31 +9,14 @@
     <title>Laner Electric Supply</title>
   </head>
   <body>
-    <!--Alert warning. Closeable-->
-    <div id="alt" class="alert alert-warning alert-dismissible fade show" role="alert">
-      <strong>Due to Covid-19, our <a href ="c19.html">hours of operation</a> have changed.</strong>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <!--Mobile-->
-    <div id="alt1" class="alert alert-warning alert-dismissible fade show" role="alert">
-      <strong>Our new<a href="c19.html"> hours of operation.</a> </strong>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <!-- Navbar needs linking-->
-
+  <!-- Navbar needs linking-->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"> </span>
       </button>
-        <a class="navbar-brand" href="#"> <img src="imgs/llt.png" width=70px></a>
+      <a class="navbar-brand" href="#"><img src="imgs/llt.png" width=70px></a>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-
         <ul class="navbar-nav">
-
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -48,7 +31,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Download
+            Download
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" download="cs.pdf" href="CAPABILITY STATEMENT.pdf">Capabilities.pdf</a>
@@ -59,7 +42,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              More
+            More
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">Core Competencies</a>
@@ -81,25 +64,20 @@
          <div id="svc">To order please call</div> 510-215-5100
       </span>
     </nav>
-
     <div class="bx">
       <img id="gg" src="imgs/gg.png">
       <img id="le" src="imgs/tp.png">
     </div>
-
     <h2>SERVING QUALITY DRIVEN BULDERS SINCE 1984</h2>
-
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-centered">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </div>
 
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
         <!--Login-->
         <div class="col-md-6 col-centered">
-
           <form id="log">
-
             <div class="form-group">
               <strong>Extranet Login<br></strong>
               <label for="exampleInputEmail1">Username</label>
@@ -120,35 +98,20 @@
         </div>
       </div>
     </div>
-
     <!--orderform-->
-    <div class="col-md-6 col-centered">
-    <h4>Place an order:</h4>
-    <form action="mailto:cazessus.elias@gmail.com" enctype="multipart/form-data" class="contactus" method="post">
-      <br><input style="width:300px;"type="text" name="name" placeholder="Full Name">
-      <br><input style="width:300px;"type="email" name="email" placeholder="Email Address">
-      <br><input style="width:300px;"type="text" name="company" placeholder="Company">
-      <br><input style="width:300px;"type="text" name="item" placeholder="Phone Number">
-      <br><select class="" name="">
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-        <option value="4">Four</option>
-        <option value="5">Five</option>
-      </select>
-      <br><textarea style="width:300px;"type="text" name="message" placeholder="Message"></textarea>
-      <br><input id="sub3" type="submit" value="Submit">
-    </form>
-      </div>
-
-
-   <hr id="hr" />
-
-   <div class="col-8 col-centered">
+    <div class="col-md-4 col-centered">
+      <form class="cl" action="order.html" method="">
+        <strong>Place an Order:</strong>
+        <input class='btns'type="submit" name="Customer" value="Existing Customer">
+        <input class='btns'type="submit" name="Customer" value="Guest">
+      </form>
+    </div>
+    <hr id="hr" />
+    <div class="col-8 col-centered">
      <h3>About Us</h3>
      "Established in 1984, Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility.."
-   </div>
-   <div class="col-8 col-centered">
+    </div>
+    <div class="col-8 col-centered">
      <strong>Core Competencies</strong>
      <ul>
        <li>Full-line stocking distributor of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices.</li>
@@ -158,7 +121,7 @@
        <li>EDI, XML, Ariba trading partner electronic transaction interchange integration available.</li>
      </ul>
    </div>
-<!--Carousel-->
+   <!--Carousel-->
    <div class="jumbotron bg-dark text-white jumbotron-fluid">
      <div class="container">
        <h1 class="display-4"></h1>
@@ -171,24 +134,29 @@
                  <li>iMark Group</li>
                  <li>National Association of Electrical Distributors (NAED)</li>
                  <li>Golden Gate Business Association (GGBA)</li>
-                 <li>West Contra Costa County Council of Industries (COI)</li>
+                 <li>West Contra Costa County Council of Industries (COI) </li>
                  <li>Richmond Chamber of Commerce</li>
                </ul>
+               <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="80px"></a>
+               <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="80px"></a>
+               <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="80px"></a>
              </div>
            </div>
            <div class="carousel-item">
              <div class="d-block w-100">
                <strong>Certifications</strong>
                <ul>
-                 <li>SBA 8(a) – Woman / Minority / Disadvantaged Business Enterprise</li>
-                 <li>NGLCC – LGBT Owned Business Enterprise</li>
+                 <li>SBA 8(a) – Woman / Minority / Disadvantaged Business Enterprise </li>
+                 <li>NGLCC – LGBT Owned Business Enterprise  </li>
                  <li>CADGS – California Small Business Enterprise</li>
                </ul>
-
+               <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="80px"></a>
+               <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="80px"></a>
+               <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="80px"></a>
              </div>
            </div>
            <div class="carousel-item">
-             <img class="d-block w-100" src="imgs/sol.png" alt="Third slide">
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </div>
          </div>
          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -202,39 +170,35 @@
        </div>
      </div>
    </div>
-       <hr id="hr2" />
-         <h3>Contact Us</h3>
-         <br>
-       <div class="container">
-         <div class="row">
-
-
-
-           <div class="col-md col-centered">
-             <h4>Location:</h4>
-             <div id="map"></div>
-             <script src="scripts/le.js"></script>
-             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
-             </script>
-            <strong>510-215-5100<br>1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm</strong>
-             </div>
-           <div class="col-md col-centered">
-             <h4>For general inquries:</h4>
-             <form action="mailto:cazessus.elias@gmail.com" enctype="multipart/form-data" class="contactus" method="post">
-               <br><input style="width:300px;"type="text" name="name" placeholder="Full Name">
-               <br><input style="width:300px;"type="email" name="email" placeholder="Email Address">
-               <br><input style="width:300px;"type="text" name="company" placeholder="Company">
-               <br><input style="width:300px;"type="text" name="number" placeholder="Phone Number">
-               <br><textarea style="width:300px;"type="text" name="message" placeholder="Message"></textarea>
-               <br><input id="sub3" type="submit" value="Submit">
-             </form>
-           </div>
-
-         </div>
-       </div>
-      <div>
-        <img id ="ber"src="imgs/ber.png">
+   <hr id="hr2" />
+   <h3>Contact Us</h3>
+   <br>
+   <div class="container">
+    <div class="row">
+     <div class="col-md col-centered">
+      <h4>Location:</h4>
+      <div id="map"></div>
+      <script src="scripts/le.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
+      </script>
+      <strong>510-215-5100<br>1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm</strong>
+    </div>
+    <div class="col-md col-centered">
+      <h4>For general inquries:</h4>
+        <form action="mailto:cazessus.elias@gmail.com" enctype="multipart/form-data" class="contactus" method="post">
+          <br><input style="width:300px;"type="text" name="name" placeholder="Full Name">
+          <br><input style="width:300px;"type="email" name="email" placeholder="Email Address">
+          <br><input style="width:300px;"type="text" name="company" placeholder="Company">
+          <br><input style="width:300px;"type="text" name="number" placeholder="Phone Number">
+          <br><textarea style="width:300px;"type="text" name="message" placeholder="Message"></textarea>
+          <br><input id="sub3" type="submit" value="Submit">
+        </form>
+        </div>
       </div>
+     </div>
+    <div>
+      <img id ="ber"src="imgs/ber.png">
+    </div>
     <footer>
       <div class="Sub">
         <button type="button" id="sub"><strong>Subscribe!</strong></button>
@@ -248,5 +212,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
-
 </html>
