--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
+        <!--orderform-->
+        <div class="col-md-6 col-centered">
+          <form class="cl" action="order.html" method="">
+            <strong>Place an Order:</strong><br>
+            <input class='btns'type="submit" name="Customer" value="Existing Customer">
+            <input class='btns'type="submit" name="Customer" value="Guest"><br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </form>
+        </div>
         <!--Login-->
         <div class="col-md-6 col-centered">
           <form id="log">
@@ -88,24 +97,17 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
-            <div class="form-group form-check">
+        <!--     <div class="form-group form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Keep me logged in</label>
-            </div>
+              <label class="form-check-label" for="exampleCheck1"></label>
+           </div> -->
             <button type="submit" class="btns">Submit</button>
             <button type="submit" class="btns">Request Account</button>
           </form>
         </div>
       </div>
     </div>
-    <!--orderform-->
-    <div class="col-md-4 col-centered">
-      <form class="cl" action="order.html" method="">
-        <strong>Place an Order:</strong>
-        <input class='btns'type="submit" name="Customer" value="Existing Customer">
-        <input class='btns'type="submit" name="Customer" value="Guest">
-      </form>
-    </div>
+
     <hr id="hr" />
     <div class="col-8 col-centered">
      <h3>About Us</h3>
@@ -129,30 +131,18 @@
          <div class="carousel-inner">
            <div class="carousel-item active">
              <div class="d-block w-100">
-               <strong>Affiliations</strong>
-               <ul>
-                 <li>iMark Group</li>
-                 <li>National Association of Electrical Distributors (NAED)</li>
-                 <li>Golden Gate Business Association (GGBA)</li>
-                 <li>West Contra Costa County Council of Industries (COI) </li>
-                 <li>Richmond Chamber of Commerce</li>
-               </ul>
-               <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="80px"></a>
-               <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="80px"></a>
-               <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="80px"></a>
+               <h3>Affiliations</h3><br>
+               <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="100h3px"></a>
+               <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="100h3px"></a>
+               <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="100h3px"></a>
              </div>
            </div>
            <div class="carousel-item">
              <div class="d-block w-100">
-               <strong>Certifications</strong>
-               <ul>
-                 <li>SBA 8(a) – Woman / Minority / Disadvantaged Business Enterprise </li>
-                 <li>NGLCC – LGBT Owned Business Enterprise  </li>
-                 <li>CADGS – California Small Business Enterprise</li>
-               </ul>
-               <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="80px"></a>
-               <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="80px"></a>
-               <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="80px"></a>
+               <h3>Certifications</h3><br>
+               <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="100h3px"></a>
+               <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="100h3px"></a>
+               <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="100h3px"></a>
              </div>
            </div>
            <div class="carousel-item">
