started ui changes

--- a/Order.html
+++ b/Order.html
@@ -10,7 +10,7 @@
     <title>Laner Electric Supply</title>
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"> </span>
       </button>
