--- a/index.html
+++ b/index.html
@@ -1,281 +1,85 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Laner Electric Supply</title>
   </head>
   <body>
-  <!-- Navbar needs linking-->
-  <div class="col-centered" id="covid">
-    Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.
+    <!-- First Page + Title -->
+    <div class="scroll">
+      <div class="title">
+        <h1>Laner Electric</h1>
+        <h3>SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
+      </div>
+      <div class="down"><i class="fas fa-angle-double-down fa-4x" aria-hidden="true"></i></div>
+    </div>
 
-    Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.
-
-    The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face.
-    <a href="#" id='xx'>dismiss</a>
-  </div>
-
-
-
-  <div class="popup">
-    <a href="#" id="x">x</a>
+    <!-- About Us/Second Section -->
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-centered cl">
-          <form class="order" action="https://formspree.io/mvowkdyg" method="post">
-
-            <input type="text" name="name" placeholder="Name">
-            <input type="text" name="" placeholder="Company Name">
-            <input type="text" name="_replyto" placeholder="Email">
-            <input type="text" name="Job/Po" placeholder="Job # / po">
-            <input type="text" name="Phone" placeholder='Phone'>
-            <input type="text" name="Date Required" placeholder='Date Required'><br>
-            <label for="order">Order type</label><br>
-            <select class="" name="Order Type" required>
-              <option value="Choose" selected='' disabled=''>Choose</option>
-              <option value="Will Call">Will Call</option>
-              <option value="Quote">Quote</option>
-              <option value="Delivery">Delivery</option>
-            </select><br>
-            <label for="order">Prefered contact method</label><br>
-            <select class="" name="Contact" required>
-              <option value="Choose" selected='' disabled=''>Choose</option>
-              <option value="Email">Email</option>
-              <option value="Phone">Phone</option>
-            </select><br>
-            <label for="order">Payment method</label><br>
-            <select class="" name="Payment" required>
-              <option value="Choose" selected='' disabled=''>Choose</option>
-              <option value="Cash">Cash (Will-Call only)</option>
-              <option value="Check">Check (Will-Call only)</option>
-              <option value="Card">Card (over $300 see *)</option>
-            </select>
-            <br>
-            <div class="jsc">
-              <a name="" href='#' onclick='addField()'>Add Item</a><br>
-              <input type="text" name="lineitem" value=""> <input type="number" class='fr'name="lineq" style="width:40px;">
-            </div>
-            Please include the quantity, items and any extra comments below <br>
-            <textarea id='mb1'name="name" rows="8" placeholder=""cols="50"></textarea>
-            <textarea id='mbt' name="name" rows="8" cols="30"></textarea><br>
-            <input type="submit" name="Comments" value="Send">
-          </form>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit, sed do eiusmod tempor incididunt ut labore et dolore
-             magna aliqua. Ut enim ad minim veniam, quis nostrud
-             exercitation ullamco laboris nisi ut aliquip ex ea
-             commodo consequat. Duis aute irure dolor in reprehenderit
-              in voluptate velit esse cillum dolore eu fugiat nulla
-              pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est
-              laborum.</p>
-
+        <div class="col-6-md col-centered">
+          <h2>About Us</h2><br>
+          "Established in 1984, Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility.."
         </div>
-
-      </div>
-
-    </div>
-  </div>
-
-
-
-    <nav class="navbar sticky-top navbar-expand-sm">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"> </span>
-      </button>
-      <a class="navbar-brand" href="#"><img src="imgs/llt.png" width=70px></a>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Download
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" download="cs.pdf" href="CAPABILITY STATEMENT.pdf">Capabilities.pdf</a>
-              <a class="dropdown-item" href="#">Credit Application</a>
-              <a class="dropdown-item" href="#">Credit Card Authorization</a>
-              <a class="dropdown-item" href="#">Line Card</a>
+        <div class="col-6-md col-centered">
+          <div class="login">
+            <h1 id="ext">Extranet Login</h1>
+            <form class="" action="#" method="post">
+              <input type="text" class="field" placeholder="Email">
+              <input type="password" class="field" placeholder="Password">
+              <input type="submit" class="btn" value="login">
+            </form>
+            <div class="request">
+              <a href="#" >Request Account</a>
             </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            More
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Core Competencies</a>
-              <a class="dropdown-item" href="#">Certifications</a>
-              <a class="dropdown-item" href="#">Affiliations</a>
-              <a class="dropdown-item" href="#">Projects & Customers</a>
-              <a class="dropdown-item" href="#">Corporate Social Responsibility</a>
-            </div>
-          </li>
-          <li id=num class="nav-item">
-            To order please call 510-215-5100
-          </li>
-        </ul>
-      </div>
-      <span id=mob class="navbar-text">
-        <strong>Laner Electric Supply</strong>
-      </span>
-      <span class="navbar-text">
-         <div id="svc">To order please call</div> 510-215-5100
-      </span>
-    </nav>
-    <div class="bx">
-      <img id="gg" src="imgs/gg.png">
-      <img id="le" src="imgs/tp.png">
-    </div>
-    <h2>SERVING QUALITY DRIVEN BULDERS SINCE 1984</h2>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-centered">
-
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-        <!--orderform-->
-
-
-        <button type='input' id="pop">Place Order</button>
-
-
-        <!--Login-->
-        <div class="col-md-6 col-centered">
-          <form id="log">
-            <div class="form-group">
-              <strong>Extranet Login<br></strong>
-              <label for="exampleInputEmail1">Username</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <small id="emailHelp" class="form-text">We'll never share your email with anyone.</small>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-        <!--     <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1"></label>
-           </div> -->
-            <button type="submit" class="btns">Submit</button>
-            <button type="submit" class="btns">Request Account</button>
-          </form>
+          </div>
         </div>
       </div>
     </div>
 
-    <hr id="hr" />
-    <div class="col-8 col-centered">
-     <h3>About Us</h3>
-     "Established in 1984, Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility.."
-    </div>
-    <div class="col-8 col-centered">
-     <strong>Core Competencies</strong>
-     <ul>
-       <li>Full-line stocking distributor of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices.</li>
-       <li>Long-term inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution.</li>
-       <li>Experienced personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing.</li>
-       <li>Long-term trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources.</li>
-       <li>EDI, XML, Ariba trading partner electronic transaction interchange integration available.</li>
-     </ul>
-   </div>
-   <!--Carousel-->
-   <div class="jumbotron bg-dark text-white jumbotron-fluid">
-     <div class="container">
-       <h1 class="display-4"></h1>
-       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-         <div class="carousel-inner">
-           <div class="carousel-item active">
-             <div class="d-block w-100">
-               <h3>Affiliations</h3><br>
-               <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="100h3px"></a>
-               <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="100h3px"></a>
-               <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="100h3px"></a>
-             </div>
-           </div>
-           <div class="carousel-item">
-             <div class="d-block w-100">
-               <h3>Certifications</h3><br>
-               <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="100h3px"></a>
-               <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="100h3px"></a>
-               <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="100h3px"></a>
-             </div>
-           </div>
-           <div class="carousel-item">
-             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-           </div>
-         </div>
-         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-           <span class="sr-only">Previous</span>
-         </a>
-         <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-           <span class="sr-only">Next</span>
-         </a>
-       </div>
-     </div>
-   </div>
-   <hr id="hr2" />
-   <h3>Contact Us</h3>
-   <br>
-   <div class="container">
-    <div class="row">
-     <div class="col-md col-centered">
-      <h4>Location:</h4>
-      <div id="map"></div>
-      <script src="scripts/le.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
-      </script>
-      <strong>510-215-5100<br>1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm</strong>
-    </div>
-    <div class="col-md col-centered">
-      <h4>For general inquries:</h4>
-        <form action="mailto:cazessus.elias@gmail.com" enctype="multipart/form-data" class="contactus" method="post">
-          <br><input style="width:300px;"type="text" name="name" placeholder="Full Name">
-          <br><input style="width:300px;"type="email" name="email" placeholder="Email Address">
-          <br><input style="width:300px;"type="text" name="company" placeholder="Company">
-          <br><input style="width:300px;"type="text" name="number" placeholder="Phone Number">
-          <br><textarea style="width:300px;"type="text" name="message" placeholder="Message"></textarea>
-          <br><input id="sub3" type="submit" value="Submit">
-        </form>
+    <!-- Third Page/Section, affils + certs -->
+    <div class="scroll2"></div>
+    <div class="jumbotron bg-white jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4"></h1>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner" style=" width:100%; height: 200px !important;">
+            <div class="carousel-item active">
+              <div class="d-block w-100">
+                <h3>Affiliations</h3><br>
+                <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="100h3px"></a>
+                <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="100h3px"></a>
+                <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="100h3px"></a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-block w-100">
+                <h3>Certifications</h3><br>
+                <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="100h3px"></a>
+                <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="100h3px"></a>
+                <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="100h3px"></a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
-     </div>
-    <div>
-      <img id ="ber"src="imgs/ber.png">
     </div>
-    <footer>
-      <div class="Sub">
-        <button type="button" id="sub"><strong>Subscribe!</strong></button>
-      </div>
-      <div class="ics">
-      <button id="but" class="fab fa-linkedin-in"></button>
-      <button id="but3" class="fas fa-rss"></button>
-      </div>
-    </footer>
-    <!-- end wrap -->
-
-    <script type="text/javascript" src="scripts/main.js">
-
-    </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
   </body>
 </html>
