--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Laner Electric Supply</title>
   </head>
@@ -12,26 +12,27 @@
     <!-- First Page + Title -->
     <div class="scroll">
       <div class="title">
-        <h1>Laner Electric</h1>
-        <h3>SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
+        <h1 id="laner_electric">Laner Electric</h1>
+        <!--<img id="logo" src="imgs/Laner.png" alt="">-->
+        <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
       </div>
-      <div class="down"><i class="fas fa-angle-double-down fa-4x" aria-hidden="true"></i></div>
+      <div class="down"><a href="#about"class="fas fa-angle-double-down fa-4x" aria-hidden="true"></a></div>
     </div>
 
     <!-- About Us/Second Section -->
     <div class="container">
       <div class="row">
-        <div class="col-6-md col-centered">
-          <h2>About Us</h2><br>
+        <div id="about" class="col-md-6 col-centered">
+          <h1>About Us</h1><br>
           "Established in 1984, Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility.."
         </div>
-        <div class="col-6-md col-centered">
+        <div class="col-md-6 col-centered">
           <div class="login">
             <h1 id="ext">Extranet Login</h1>
             <form class="" action="#" method="post">
               <input type="text" class="field" placeholder="Email">
               <input type="password" class="field" placeholder="Password">
-              <input type="submit" class="btn" value="login">
+              <input type="submit" class="btn" value="Login">
             </form>
             <div class="request">
               <a href="#" >Request Account</a>
@@ -79,6 +80,7 @@
         </div>
       </div>
     </div>
+      <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
