maps re-integration

--- a/index.html
+++ b/index.html
@@ -80,7 +80,37 @@
         </div>
       </div>
     </div>
-      <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
+
+    <!-- Fourth page/section Google Maps Api and Contactus form -->
+    <div class="scroll3"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-centered text-center">
+          <div id="map"></div>
+          <script src="scripts/le.js"></script>
+          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
+          </script>
+          510-215-5100<br>1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
+        </div>
+        <div class="col-lg-6 col-centered">
+          <div class="login">
+            <h1 id="ext">Contact Us</h1>
+            <form class="" action="#" method="post">
+              <input type="text" class="field" placeholder="Name">
+              <input type="password" class="field" placeholder="Email">
+              <textarea type="password" class="field" placeholder="Message"></textarea>
+              <input type="submit" class="btn" value="Send">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+    <footer></footer>
+    <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
