--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     <div class="container">
       <div class="row">
         <div id="about" class="col-md-6 col-centered">
-          <strong>Established in 1984</strong>, Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
+          <h3>Established in 1984</h3>
+          Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
           <br>
           <br>
           <br>
