--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div id="two">
     </div>
     <nav id="top" class="navbar navbar-expand-lg navbar-light sticky-top">
-      <a class="navbar-brand" href="#"><h6>Laner Electric Supply</h6></a>
+      <a href="#"class="navbar-left"><img src="imgs/Laner.png " id=logo1 alt=""> </a>
+      <a class="navbar-brand" href="#"> <h6>Laner Electric Supply</h6></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,12 +38,12 @@
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#">About</a>
           <a class="nav-item nav-link" href="#">Contact</a>
-          <a class="nav-item nav-link place" href="#pl">Place Order</a>
           <a class="nav-item nav-link" href="#">Download</a>
           <a class="nav-item nav-link" href="#">More</a>
-          <a class="nav-item nav-link">Call/Text (510) 215-5100</a>
+
         </div>
       </div>
+        <a class="navbar-right">Call/Text (510) 215-5100</a>
     </nav>
 
 
@@ -88,8 +89,7 @@
           <br>
           <div class="order-form">
             <form class="" action="#" method="post">
-              <input type="button" class="btn"name="ord" value="PLACE AN ORDER">
-
+              <input type="button" class="btn place"name="ord"value="PLACE AN ORDER">
             </form>
 
           </div>
@@ -164,7 +164,7 @@
     <div class="scroll3"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-centered text-center">
+        <div class="col-md-6 col-centered text-center bottom">
           <h1>Visit Us</h1>
           1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
           <div id="map"></div>
@@ -173,7 +173,7 @@
           <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
           </script>
         </div>
-        <div class="col-lg-6 col-centered">
+        <div class="col-md-6 col-centered bottom">
           <div class="login">
             <h1 id="ext">Contact Us</h1>
             <form class="" action="#" method="post">
@@ -191,9 +191,12 @@
 
 
     <footer>
-      <a href="#">Linkedin</a>
-      <a href="#">Subscribe</a>
-      <a href="#">RSS</a>
+      <a href="#" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
+
+      <a href="#" class="fa fa-yelp fa-2x" aria-hidden="true"></a>
+      <a href="#" class="fa fa-rss fa-2x" aria-hidden="true"></a>
+      <br>
+      <a href="#" class="fa"><h5>Subscribe</h5></a>
     </footer>
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
