--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <nav id="top" class="navbar navbar-expand-lg navbar-light sticky-top">
       <a href="#"class="navbar-left"><img src="imgs/Laner.png " id=logo1 alt=""> </a>
-      <a class="navbar-brand" href="#"> <h6>Laner Electric Supply</h6></a>
+      <a class="navbar-brand" href="#"> <h5>Laner Electric Supply</h5></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,7 +43,7 @@
 
         </div>
       </div>
-        <a class="navbar-right">Call/Text (510) 215-5100</a>
+        <a class="navbar-right">Call / Text (510) 215-5100</a>
     </nav>
 
 
@@ -80,7 +80,7 @@
 
 
 
-    <div class="container">
+    <div class="container sec1">
       <div class="row">
         <div id="about" class="col-md-6 col-centered">
           <h3>Established in 1984,</h3>
