changes to footer sec

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- First Page + Title -->
     <div class="scroll">
       <div class="title">
+        <a href="#"class="navbar-left"><img src="imgs/Laner.png" id=logo0 alt=""height=150px> </a>
         <h1 id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
@@ -186,18 +187,39 @@
 
     <!-- Fourth page/section Google Maps Api and Contactus form -->
     <div class="scroll3"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-centered text-center bottom">
-          <h1>Visit Us</h1>
-          1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
-          <div id="map"></div>
 
-          <script src="scripts/le.js"></script>
-          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
-          </script>
+
+    <div class="container-fluid Subscribe">
+      <div class="row">
+        <div class="col-md-12 col-centered text-center">
+          <form class="news" action="index.html" method="post">
+            <input type="text" name="" value="">
+            <input type="text" name="" value="">
+          </form>
+          <h1>Subscribe to our newsletter!</h1>
         </div>
-        <div class="col-md-6 col-centered bottom">
+
+      </div>
+    </div>
+
+
+    <div class="end">
+
+
+    <div class="container-fluid">
+      <div class="row  end-area">
+
+        <div class="col-lg-3 col-centered text-left bottom">
+          <h1>laner electric supply</h1>
+          <a href="#" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
+
+          <a href="#" class="fa fa-yelp fa-2x" aria-hidden="true"></a>
+          <a href="#" class="fa fa-rss fa-2x" aria-hidden="true"></a>
+          <br>
+          <a href="#" class="fa"><h5>Subscribe</h5></a>
+        </div>
+
+        <div class="col-lg-3 col-centered bottom">
           <div class="login">
             <h1 id="ext">Contact Us</h1>
             <form class="" action="#" method="post">
@@ -208,19 +230,32 @@
             </form>
           </div>
         </div>
+
+        <div class="col-lg-3 col-centered text-left bottom">
+
+          <div id="map"></div>
+
+          <script src="scripts/le.js"></script>
+          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
+          </script>
+        </div>
+
+        <div class="col-lg-3 col-centered bottom text-left">
+
+          <h1>Visit Us</h1>
+          1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
+
+        </div>
+
       </div>
+    </div>
+
     </div>
 
 
 
-
     <footer>
-      <a href="#" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
-
-      <a href="#" class="fa fa-yelp fa-2x" aria-hidden="true"></a>
-      <a href="#" class="fa fa-rss fa-2x" aria-hidden="true"></a>
-      <br>
-      <a href="#" class="fa"><h5>Subscribe</h5></a>
+      <h6>Developed by Eliascz.dev</h6>
     </footer>
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
