--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1 id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
-        <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x" aria-hidden="true"></a></div>
+        <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x fic" aria-hidden="true"></a></div>
       </div>
 
     </div>
@@ -173,19 +173,19 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3 ic">
-          <i class="fa fa-building-o fa-4x" aria-hidden="true"></i>
+          <i class="fa fa-building-o fa-4x faic" aria-hidden="true"></i>
           <li>Full-line stocking distributor of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices. </li>
         </div>
         <div class="col-md-3 ic">
-          <i class="fa fa-users fa-4x" aria-hidden="true"></i>
+          <i class="fa fa-users fa-4x faic" aria-hidden="true"></i>
           <li>Long-term inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
         </div>
         <div class="col-md-3 ic">
-          <i class="fa fa-desktop fa-4x" aria-hidden="true"></i>
+          <i class="fa fa-desktop fa-4x faic" aria-hidden="true"></i>
           <li>Experienced personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
         </div>
         <div class="col-md-3 ic">
-          <i class="fa fa-handshake-o fa-4x" aria-hidden="true"></i>
+          <i class="fa fa-handshake-o fa-4x faic" aria-hidden="true"></i>
           <li>Long-term trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
         </div>
 
@@ -258,40 +258,50 @@
         <div class="col-xl-3 text-center bottom">
           <img src="imgs/laner.png" style="height:200px;"alt="">
           <br>
+          SERVING QUALITY DRIVEN BULDERS SINCE 1984
+
+          <br>
           <br>
           <a href="#" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
-          <a href="#" class="fa fa-yelp fa-2x" aria-hidden="true"></a>
           <a href="#" class="fa fa-rss fa-2x" aria-hidden="true"></a>
           <br>
         </div>
 
-        <div class="col-xl-3  bottom">
-          <div class="login">
-            <h1 id="ext">Contact Us</h1>
-            <form class="" action="#" method="post">
-              <input type="text" class="field" placeholder="Name">
-              <input type="password" class="field" placeholder="Email">
-              <textarea type="password" class="field" placeholder="Message"></textarea>
-              <input type="submit" class="btn" value="Send">
-            </form>
-          </div>
+        <div class="col-xl-3 text-center bottom">
+          <h1>Visit Us</h1>
+            <i class="fas fa-store"aria-hidden="true"></i> <h5>Main Office</h5>
+          1310 S 51st St Richmond, CA, 94804
+          <br>
+          <i class="fa fa-phone"aria-hidden="true"></i>
+          <h5>Main Line</h5>
+          (510) 215-5100 <br>
+          <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <h5>Hours</h5>
+           Mon-Fri, 7am-4:30pm
         </div>
 
         <div class="col-xl-3 bottom">
-
           <div id="map"></div>
-
           <script src="scripts/le.js"></script>
           <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
           </script>
         </div>
-
-        <div class="col-xl-3 bottom ">
-
-          <h1>Visit Us</h1>
-          1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
-
+        <div class="col-xl-3 text-center bottom">
+          <div class="contact">
+            <i class="fa fa-address-card" aria-hidden="true"></i>
+            <h1>Contact Us</h1>
+            <form class="" action="#" method="post">
+              <input type="text" class="field2" placeholder="Name">
+              <input type="password" class="field2" placeholder="Email">
+              <textarea type="password" class="field2" placeholder="Message"></textarea>
+              <input type="submit" class="btn btn2" value="Send">
+            </form>
+          </div>
         </div>
+
+
+
+
 
       </div>
     </div>
@@ -301,7 +311,8 @@
 
 
     <footer>
-      <h6>Developed by Eliascz.dev</h6>
+
+      <h6>Powered by <a href="https://eliascz.dev">Eliascz.dev</a></h6>
     </footer>
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
